// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaultsRegistry owner can add factory 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 47328,
}
`;

exports[`VaultsRegistry owner can add vault 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 57694,
}
`;

exports[`VaultsRegistry owner can register implementation contract 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 47499,
}
`;

exports[`VaultsRegistry owner can remove factory 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 25491,
}
`;

exports[`VaultsRegistry owner can remove implementation 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 25442,
}
`;
